@@ -1,5 +1,8 @@
 In Wall4PHP 1.1_TeraWurfl2 since Wall4PHP 1.1
 
+*) Improved User Agent Detection System to detect the actual User Agent even when Proxies
+   and Opera Mini mask them.
+
 *) Added support for Tera-WURFL v2.x (Steve Kamerman, David, Alex).
 
 *) This version works with PHP Tools, Tera-WURFL 1.x and Tera-WURFL 2.x
